correctly aligned text

--- a/src/components/link/styles/link.scss
+++ b/src/components/link/styles/link.scss
@@ -12,6 +12,7 @@
     }
     h2{
         font-size: 1.7rem;
+        text-align: center;
         @media screen and (min-width: 1220px) {
             font-size: 1.9rem;
         }
